second attempt commit

--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-
-<!DOCTYPE html>
-<html>
-<head>
-    <title>
-     Email Test
-    </title>
-</head>
-<body>
-    Home page
-</body>
-</html>
+hello world
