hero main cta design

--- a/get-fit-for-destiny5-6.html
+++ b/get-fit-for-destiny5-6.html
@@ -41,11 +41,27 @@
                 <div class="mobile-img m--pray-sweat-learn-change">
                     <img src="imgs/ffd-mobile.png" class="ffd-hero-image-mobile">
                 </div>
-                <div class="content-panel__content">
-                    <h1 class="hero-statement m--line-1">
-                        Join My
-                    </h1>
-                </div>
+                <div class="content-panel m--mobile-hero">
+                    <div class="content-panel__content">
+                        <h1 class="hero-statement m--line-1 primary">
+                            Wake Up
+                        </h1>
+                        <h1 class="hero-statement plus">+</h1>
+                        <h1 class="hero-statement m--line-2 secondary">
+                            Align w/Your
+                        </h1>
+                        <h1 class="hero-statement m--line-4 primary">Destiny</h1>
+                  
+                        <div class="mb-3 mt-3">
+                            <p>"Join Me Daily For One Hour Of <span class="tertiary bold">Morning Alignment</span>."</p>
+                        </div>
+                        <h5 class="primary m--larger-panel-copy">Pray, Sweat, Learn, Change</h5>  
+                        <div>
+                            <a href="#get-fit-for-destiny">
+                                <button class="btn btn-dark si-button">Join Now</button>
+                            </a>
+                        </div> 
+                    </div>
             </div>
             </div>
     </div>
