added button back

--- a/get-fit-for-destiny4-21.html
+++ b/get-fit-for-destiny4-21.html
@@ -271,7 +271,17 @@
                                    <p>+ 10% off Regular membership fee-<s>$49/mo</s> $39/mo</p>   
                             </div>
                         </div>
-                    </div>   
+                    </div>
+                    <div class="row join-now-header justify-content-center">
+                            <div class="col-sm-12 col-md-4">
+                                <button class="btn si-button">Join Now - $19.99/first month<br>
+                                    Then $39/mo.</button>
+                                     <p clas="bold offer-expiration-date primary">
+                                         "Align Yourself" Promotion Ends May 31, 2021
+                                     </p>
+                            </div>
+                    </div>
+                        
                 <div class="row">
                     <div class="col-sm-12">
                             <ul>
