changes beofre workday

--- a/get-fit-for-destiny5-6.html
+++ b/get-fit-for-destiny5-6.html
@@ -58,7 +58,7 @@
                         <h5 class="primary m--larger-panel-copy">Pray, Sweat, Learn, Change</h5>  
                         <div>
                             <a href="#get-fit-for-destiny">
-                                <button class="btn btn-dark si-button">Join Now</button>
+                                <button class="btn btn-dark si-button">Get Free - 7 Day Access</button>
                             </a>
                         </div> 
                     </div>
