git change for other home hero align

--- a/get-fit-for-destiny5-6.html
+++ b/get-fit-for-destiny5-6.html
@@ -53,7 +53,7 @@
                         <div class="mb-3 mt-3">
                             <p>"Join Me Daily For One Hour Of <span class="tertiary bold">Morning Alignment</span>."</p>
                         </div>
-                        <h5 class="primary m--larger-panel-copy">Pray, Sweat, Learn, Change</h5>  
+                        <h5 class="primary m--larger-panel-copy">Pray, Sweat, Learnz, Change</h5>  
                         <div>
                             <a href="#get-fit-for-destiny">
                                 <button class="btn btn-dark si-button">
