link to about program added

--- a/get-fit-for-destiny5-7.html
+++ b/get-fit-for-destiny5-7.html
@@ -63,7 +63,7 @@
                             <div class="mt-2">
                                 <a href="#get-fit-for-destiny">
                                     <button class="si-button btn m--btn-ghost">
-                                        Learn More
+                                       <a href="about-morning-alignment-fit-for-destiny.html#about">Learn More</a> 
                                     </button>
                                 </a>
                             </div>
