changes made locally

--- a/get-fit-for-destiny5-7.html
+++ b/get-fit-for-destiny5-7.html
@@ -46,9 +46,9 @@
                         </h1>
                         <h1 class="hero-statement plus">&amp;</h1>
                         <h1 class="hero-statement m--line-2 secondary">
-                            Align With
+                         Get Fit For
                         </h1>
-                        <h1 class="hero-statement m--line-4 primary">Your Destiny</h1>
+                        <h1 class="hero-statement m--line-4 primary">Destiny</h1>
                    
                         <div class="mb-3 mt-3">
                             <p>"Join Me Daily For One Hour Of <span class="tertiary bold">Morning Alignment</span>."</p>
