about hero page updates

--- a/about-morning-alignment-fit-for-destiny.html
+++ b/about-morning-alignment-fit-for-destiny.html
@@ -43,16 +43,18 @@
                         </div>
                         <div class="content-panel m--mobile-hero">
                             <div class="content-panel__content">
-                                <h1 class="hero-statement m--line-1">
-                                    Join My
+                                <h1 class="ffd-page-hero-statement m--line-1">
+                                    Join Me For
                                 </h1>
-                                <h1 class="hero-statement">
-                                   <span class="primary"> Fit For Destiny</span>
+                                <h1 class="ffd-page-hero-statement m--line-2">
+                                   <span class="primary"> The Fit For Destiny</span>
                                 </h1>
-                                <h1 class="hero-statement">Morning Alignment</h1>
-                                <h4>Pray, Sweat, Learn, Change</h4>
+                                <h1 class="ffd-page-hero-statement m--line-3">Morning Alignment</h1>
+                                
                                 <div class="mb-4"></div>
-                                <h5 class="primary m--larger-panel-copy">Align Yourself with Your Destiny.</h5>  
+                                <h4 class="ffd-page-hero-statement m--motto">Pray, Sweat, Learn, Change</h4>
+                                <h5 class="ffd-page-hero-statement m--statement primary">Align Yourself with Your Destiny.</h5>  
+                                <div class="mb-3"></div>
                                 <div>
                                     <a href="#get-fit-for-destiny">
                                         <button class="btn btn-dark si-button">Join Now</button>
@@ -121,11 +123,10 @@
                             <div class="mt-2">
                           <div class="text-center">
                               <a href="#join-fit-for-destiny">
-                                  <button class="btn btn-dark si-button width-95p">
+                                  
                                       <h4>Transform Your Body &amp; Life</h4>
-                                      <p>
+                                      <button class="btn btn-dark si-button width-95p">
                                           Join Now
-                                      </p>
                                 </button>
                               </a>
                               </div>
