added links to mmouse payment

--- a/about-morning-alignment-fit-for-destiny.html
+++ b/about-morning-alignment-fit-for-destiny.html
@@ -271,9 +271,11 @@
                     </div>
                     <div class="row justify-content-center bg-dark">
                         <div class="col text-center mb-4">
-                            <button class="btn si-button">
-                                Join Now
-                            </button>
+                            <a href="https://shelinspires.com/fit-for-destiny/checkout/?rid=peO7W1">
+                                <button class="btn si-button">
+                                    Join Now
+                                </button>
+                            </a>
                             <p class="lt-text">1st Month $19.99 Then $39/mo</p>
                             <p class="bold offer-expiration-date primary">
                                 "Align Yourself" Promotion Ends May 31, 2021
@@ -331,9 +333,11 @@
             </div>
             <div class="row justify-content-center bg-dark lt-text">
                 <div class="col text-center mb-4">
-                    <button class="btn si-button">
-                        Join Now
-                    </button>
+                    <a href="https://shelinspires.com/fit-for-destiny/checkout/?rid=peO7W1">
+                        <button class="btn si-button">
+                            Join Now
+                        </button>
+                    </a>
                     <p>1st Month 19.99 Then $39/mo</p>
                     <p class="bold offer-expiration-date primary">
                         "Align Yourself" Promotion Ends May 31, 2021
