--- a/get-fit-for-destiny5-7.html
+++ b/get-fit-for-destiny5-7.html
@@ -35,7 +35,7 @@
             </div>
         </nav>
         <div class="row content-row custom m--pray-sweat-learn-change bg-dark">
-            <div class="col-sm-12 col-md-5">
+            <div class="col-sm-12 col-lg-5">
                 <div class="mobile-img m--pray-sweat-learn-change">
                     <img src="imgs/ffd-mobile.png" class="ffd-hero-image-mobile">
                 </div>
@@ -55,15 +55,16 @@
                         </div>
                         <h5 class="primary m--larger-panel-copy">Pray, Sweat, Learn, Change</h5>  
                         <div>
-                            <a href="#get-fit-for-destiny">
+                            <a href="about-morning-alignment-fit-for-destiny.html#get-fit-for-destiny">
                                 <button class="btn btn-dark si-button">
                                     Join Now
                                 </button>
                             </a>
+                      
                             <div class="mt-2">
-                                <a href="#get-fit-for-destiny">
+                                <a href="about-morning-alignment-fit-for-destiny.html#about">
                                     <button class="si-button btn m--btn-ghost">
-                                       <a href="about-morning-alignment-fit-for-destiny.html#about">Learn More</a> 
+                                       Learn More
                                     </button>
                                 </a>
                             </div>
