changes for minimum launch

--- a/get-fit-for-destiny5-7.html
+++ b/get-fit-for-destiny5-7.html
@@ -35,7 +35,7 @@
             </div>
         </nav>
         <div class="row content-row custom m--pray-sweat-learn-change bg-dark">
-            <div class="col-sm-12 col-md-5">
+            <div class="col-sm-12">
                 <div class="mobile-img m--pray-sweat-learn-change">
                     <img src="imgs/ffd-mobile.png" class="ffd-hero-image-mobile">
                 </div>
