--- a/get-fit-for-destiny6-2.html
+++ b/get-fit-for-destiny6-2.html
@@ -56,8 +56,13 @@
                         <h5 class="primary m--larger-panel-copy">Pray, Sweat, Learn, Change</h5>  
                         <div>
                            <form method="post" action="email-test.php">
+                               <p class="input-label-wrapper">
+                               <label for="fname" id="fname-label">First Name</label>
+                               </p>
                                <input type="text" name="fname" id="fname" class="input">
-                               <div class="mt-2"></div>
+                               <p class="input-label-wrapper">
+                                    <label for="email" id="email">Email:</label>
+                               </p>
                                <input type="email" name="email" id="email">
                                <div class="mt-2"></div>
                                <input type="submit" value="Accept Challenge">
