--- a/get-fit-for-destiny6-9.html
+++ b/get-fit-for-destiny6-9.html
@@ -20,16 +20,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Get Fit For Destiny <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link btn si-button" href="#">Login</a>
                     </li>
                 </ul>
             </div>
@@ -53,18 +56,23 @@
                         <div class="mb-3 mt-3">
                             <p>"Join Me Daily For One Hour of <span class="tertiary bold">Morning Alignment</span>."</p>
                         </div>
-                        <h5 class="primary m--larger-panel-copy">Pray, Sweat, Learn, Change</h5>
-                        <div class="mt-4"></div>  
+                        <h5 class="primary m--larger-panel-copy">Pray, Sweat, Learn, Change.</h5>
+                        <div class="mt-4"></div> 
+                        <p class="bold mb-0 pb-0">Join Me In The Morning- Log in, ONLINE</p>
+                        <p class="mt-0">6:00AM - 7:00AM(EST) Mon- Sat</p>
+                        <p class="bold mb-0 pb-0">Catch The Replay</p>
+                        <p class="mt-0">Available after 8:00AM(EST)</p>
+                        <div class="mt-4"></div> 
                         <div class="sign-up-form col-sm-12 col-md-6">
                           <!-- Begin Mailchimp Signup Form -->
 <div id="mc_embed_signup" class="mc-signup-custom">
 <form action="https://shelinspires.us8.list-manage.com/subscribe/post?u=bf41f67513cd774c92db7247f&amp;id=bfae02436d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 	<!--<h2>Join The Challenge</h2>-->
-<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+
 <div class="mb-2"></div>
 <div class="mc-field-group">
-	<label for="mce-EMAIL" class="form-label">Email Address  <span class="asterisk">*</span>
+	<label for="mce-EMAIL" class="form-label">Email Address<span class="asterisk">*(required)</span>
 </label>
 	<input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL">
 </div>
@@ -87,10 +95,16 @@
                       </div>
                             <div class="mt-2"></div>
                                 <div class="col-sm-12 col-md-6">
-                                <a href="about-morning-alignment-fit-for-destiny.html#about">
+                                <a href="https://shelinspires.com/fit-for-destiny/wake-up-get-fit-for-destiny/">
                                     <button class="si-button btn m--btn-ghost">
-                                       Learn More
+                                       Log In
                                     </button>
+                                </a>
+                            </div>
+                            <div class="mt-2"></div>
+                                <div class="col-sm-12 col-md-6 text-center">
+                                <a href="about-morning-alignment-fit-for-destiny.html#about">
+                                       Learn More
                                 </a>
                             </div>
                         </div>
@@ -99,6 +113,11 @@
                 </div>
             </div>
         </div>
+        <footer class="footer mt-auto py-3 bg-light">
+            <div class="container text-center">
+              <span class="text-muted">Copyright 2021</span>
+            </div>
+          </footer>
   </body>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
